fixed problem with the llm response not using the text form other nodes

--- a/notebooks/Node_Playground.ipynb
+++ b/notebooks/Node_Playground.ipynb
@@ -788,6 +788,277 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title Play Mode Execution Logic and UI (FIX for Combining Inputs + Syntax Fix 6)\n",
+        "\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, clear_output, Markdown\n",
+        "import uuid\n",
+        "import traceback\n",
+        "import time\n",
+        "import collections # Needed for deque\n",
+        "\n",
+        "# --- Global State Access ---\n",
+        "if 'nodes' not in globals(): nodes = {}\n",
+        "if 'client' not in globals(): client = None\n",
+        "if 'call_llm' not in globals():\n",
+        "    print(\"Warning: 'call_llm' function not found globally. Defining a placeholder.\")\n",
+        "    def call_llm(prompt, model=\"gpt-3.5-turbo\"):\n",
+        "        print(f\"Placeholder LLM Call with prompt: {prompt[:100]}...\")\n",
+        "        time.sleep(1); return \"Placeholder LLM response.\"\n",
+        "\n",
+        "# --- Output Widgets ---\n",
+        "play_mode_button = widgets.Button(description=\"🚀 Enter Play Mode\", button_style='warning')\n",
+        "play_output = widgets.Output()\n",
+        "full_log_output = widgets.Output()\n",
+        "\n",
+        "# --- Execution Queue ---\n",
+        "execution_queue = collections.deque()\n",
+        "active_run_id = None # Tracks the ID of the currently executing or waiting run\n",
+        "\n",
+        "# --- Helper to Add to Queue ---\n",
+        "def add_to_execution_queue(items):\n",
+        "    \"\"\"Adds items (tuple or list of tuples) to the global queue.\"\"\"\n",
+        "    global execution_queue\n",
+        "    if isinstance(items, list):\n",
+        "        execution_queue.extend(items)\n",
+        "    else:\n",
+        "        execution_queue.append(items)\n",
+        "    # print(f\"DEBUG (add_to_execution_queue): Queue size now {len(execution_queue)}, Added: {items}\")\n",
+        "\n",
+        "# --- CORE QUEUE PROCESSING FUNCTION ---\n",
+        "def process_execution_queue():\n",
+        "    \"\"\"Processes items from the global execution queue for the active run.\"\"\"\n",
+        "    global active_run_id, execution_queue\n",
+        "    # print(f\"DEBUG (process_execution_queue START): Active run: {active_run_id}, Queue size: {len(execution_queue)}\")\n",
+        "\n",
+        "    max_steps_per_call = len(nodes) + 10\n",
+        "    steps_processed = 0\n",
+        "\n",
+        "    while execution_queue and steps_processed < max_steps_per_call:\n",
+        "        next_item_run_id = execution_queue[0][2]\n",
+        "\n",
+        "        if not active_run_id: break\n",
+        "        if next_item_run_id != active_run_id: break\n",
+        "\n",
+        "        current_node_id, current_input, run_id, executed_in_run = execution_queue.popleft()\n",
+        "        steps_processed += 1\n",
+        "        # print(f\"DEBUG (process_execution_queue DEQUEUE): Node {current_node_id}, Run {run_id}. Remaining queue: {len(execution_queue)}\")\n",
+        "\n",
+        "        if current_node_id in executed_in_run:\n",
+        "             with full_log_output: print(f\"[{run_id}] Skipping node {current_node_id} - already processed.\")\n",
+        "             continue\n",
+        "        executed_in_run.add(current_node_id)\n",
+        "\n",
+        "        if current_node_id not in nodes:\n",
+        "            with play_output: display(Markdown(f\"⚠️ **Error:** Node `{current_node_id}` not found.\"))\n",
+        "            with full_log_output: print(f\"[{run_id}] Error: Node {current_node_id} not found.\")\n",
+        "            continue\n",
+        "\n",
+        "        node_data = nodes[current_node_id]\n",
+        "        node_name = node_data['name']\n",
+        "        node_type = node_data['type']\n",
+        "\n",
+        "        with full_log_output: print(f\"[{run_id}] Executing Node: {node_name} ({current_node_id}), Type: {node_type}\")\n",
+        "\n",
+        "        output_data = None\n",
+        "        port_to_follow = None\n",
+        "        next_nodes_info = []\n",
+        "\n",
+        "        try:\n",
+        "            # --- Node Type Specific Logic ---\n",
+        "            if node_type == 'Button':\n",
+        "                output_data = current_input\n",
+        "                port_to_follow = 'on_click'\n",
+        "\n",
+        "            elif node_type == 'Text Input':\n",
+        "                node_content = node_data['options'].get('content', '')\n",
+        "                output_data = {'node_name': node_name, 'text': node_content}\n",
+        "                port_to_follow = 'text_out'\n",
+        "                with full_log_output: print(f\"[{run_id}] Text Input node produced output.\")\n",
+        "\n",
+        "            elif node_type == 'Interactive Input':\n",
+        "                prompt_label = node_data['options'].get('prompt_label', f'{node_name}:')\n",
+        "                downstream_node_ids = []\n",
+        "                connected_ids = node_data.get('outputs', {}).get('user_input', [])\n",
+        "                if isinstance(connected_ids, str): connected_ids = [connected_ids]\n",
+        "                if isinstance(connected_ids, list): downstream_node_ids = connected_ids\n",
+        "\n",
+        "                text_input_widget = widgets.Text(description=prompt_label, placeholder='Type & press Enter...', layout={'width': '80%'})\n",
+        "\n",
+        "                # --- Define the submit handler ---\n",
+        "                def handle_interactive_submit(widget):\n",
+        "                    global active_run_id\n",
+        "                    user_text = widget.value; widget.disabled = True\n",
+        "                    with play_output: display(Markdown(f\"✅ Input for '{node_name}': `{user_text}`\"))\n",
+        "                    with full_log_output: print(f\"[{run_id}] User input for '{node_name}': '{user_text}'\")\n",
+        "                    items_to_add = []\n",
+        "                    for next_id in downstream_node_ids:\n",
+        "                        if next_id in nodes:\n",
+        "                            new_item = (next_id, user_text, run_id, executed_in_run.copy())\n",
+        "                            items_to_add.append(new_item)\n",
+        "                        # --- CORRECTED BLOCK AGAIN ---\n",
+        "                        else:\n",
+        "                             with full_log_output: # Indented 'with' block\n",
+        "                                 print(f\"[{run_id}] Warning: Next node {next_id} not found.\")\n",
+        "                        # --- END CORRECTION ---\n",
+        "\n",
+        "                    if items_to_add:\n",
+        "                        add_to_execution_queue(items_to_add)\n",
+        "                        if active_run_id == run_id: process_execution_queue()\n",
+        "                        else: print(f\"DEBUG: Run {run_id} no longer active.\")\n",
+        "                # --- End of handler definition ---\n",
+        "\n",
+        "                text_input_widget.on_submit(handle_interactive_submit)\n",
+        "                with play_output: display(Markdown(f\"▶️ **Action Required for '{node_name}'**\")); display(text_input_widget)\n",
+        "                with full_log_output: print(f\"[{run_id}] Paused execution at '{node_name}', waiting...\")\n",
+        "                break # Exit the 'while' loop\n",
+        "\n",
+        "            elif node_type == 'LLM Program':\n",
+        "                llm_node_prompt_template = node_data['options'].get('prompt', '')\n",
+        "                final_prompt_parts = []; gathered_inputs_formatted = []\n",
+        "                with full_log_output: print(f\"[{run_id}] LLM Node '{node_name}' gathering inputs...\")\n",
+        "\n",
+        "                # 1. Process Direct Input\n",
+        "                direct_input_source = \"Previous Node\"\n",
+        "                if isinstance(current_input, str) and current_input:\n",
+        "                     gathered_inputs_formatted.append(f\"Input from {direct_input_source}:\\n{current_input}\")\n",
+        "                     with full_log_output: print(f\"  > Found direct string input.\")\n",
+        "\n",
+        "                # 2. Scan for connected STATIC Text Input nodes\n",
+        "                with full_log_output: print(f\"[{run_id}] LLM Node '{node_name}' scanning for connected STATIC Text Inputs...\")\n",
+        "                for source_id, source_data in nodes.items():\n",
+        "                    if source_data['type'] == 'Text Input':\n",
+        "                        source_outputs = source_data.get('outputs', {})\n",
+        "                        text_out_targets = source_outputs.get('text_out', [])\n",
+        "                        if isinstance(text_out_targets, str): text_out_targets = [text_out_targets]\n",
+        "                        if current_node_id in text_out_targets:\n",
+        "                             text_content = source_data['options'].get('content', '')\n",
+        "                             text_node_name = source_data['name']\n",
+        "                             gathered_inputs_formatted.append(f\"Input from static node '{text_node_name}':\\n{text_content}\")\n",
+        "                             with full_log_output: print(f\"  > Found connected static text from '{text_node_name}' ({source_id})\")\n",
+        "\n",
+        "                # 3. Construct the context block\n",
+        "                if gathered_inputs_formatted:\n",
+        "                    context_block = \"\\n\\n---\\n\".join(gathered_inputs_formatted)\n",
+        "                    final_prompt_parts.append(\"--- Input Context ---\"); final_prompt_parts.append(context_block); final_prompt_parts.append(\"---------------------\\n\")\n",
+        "                else:\n",
+        "                     with full_log_output: print(f\"[{run_id}] LLM node received no specific input context.\")\n",
+        "\n",
+        "                # 4. Add the LLM node's own instruction\n",
+        "                instruction = llm_node_prompt_template.replace('{input}', '').strip()\n",
+        "                if instruction: final_prompt_parts.append(f\"User instruction: {instruction}\")\n",
+        "                else: final_prompt_parts.append(\"User instruction: (None)\")\n",
+        "                final_prompt = \"\\n\".join(final_prompt_parts)\n",
+        "\n",
+        "                # 5. Call LLM\n",
+        "                if client:\n",
+        "                    with full_log_output: print(f\"[{run_id}] Calling LLM with combined prompt:\\n{final_prompt[:600]}...\")\n",
+        "                    output_data = call_llm(final_prompt)\n",
+        "                else:\n",
+        "                    output_data = \"Error: OpenAI client not initialized.\"\n",
+        "                    with play_output: display(Markdown(f\"⚠️ LLM Error: Client missing.\"))\n",
+        "                port_to_follow = 'result'\n",
+        "\n",
+        "            elif node_type == 'Show':\n",
+        "                text_template = node_data['options'].get('text_template', 'Output: {input}')\n",
+        "                display_input_str = str(current_input) if current_input is not None else \"\"\n",
+        "                display_text = text_template.replace('{input}', display_input_str)\n",
+        "                with play_output: display(Markdown(f\"**{node_name}:**\\n\\n```\\n{display_text}\\n```\"))\n",
+        "                output_data = display_text\n",
+        "                port_to_follow = None\n",
+        "\n",
+        "            else: # Unknown node type\n",
+        "                with play_output: display(Markdown(f\"❓ Unknown Type: `{node_type}`\"))\n",
+        "                with full_log_output: print(f\"[{run_id}] Error: Unknown type {node_type}\")\n",
+        "                port_to_follow = None\n",
+        "\n",
+        "            # --- Find Next Nodes to Queue ---\n",
+        "            if port_to_follow and port_to_follow in node_data.get('outputs', {}):\n",
+        "                potential_next_ids = node_data['outputs'][port_to_follow]\n",
+        "                if isinstance(potential_next_ids, str): potential_next_ids = [potential_next_ids]\n",
+        "                if isinstance(potential_next_ids, list):\n",
+        "                    for next_id in potential_next_ids:\n",
+        "                         if next_id and next_id in nodes:\n",
+        "                            next_nodes_info.append((next_id, output_data, run_id, executed_in_run.copy()))\n",
+        "                         elif next_id:\n",
+        "                             with full_log_output: print(f\"[{run_id}] Warning: Target node {next_id} not found.\")\n",
+        "\n",
+        "        except Exception as e: # Catch errors during node execution\n",
+        "             tb_str = traceback.format_exc()\n",
+        "             error_md = Markdown(f\"💥 Exec Error `{node_name}` ({current_node_id}):\\n```\\n{e}\\n{tb_str[:500]}...\\n```\")\n",
+        "             with play_output: display(error_md)\n",
+        "             with full_log_output: print(f\"[{run_id}] FATAL ERROR node {current_node_id}: {e}\\n{tb_str}\")\n",
+        "             continue\n",
+        "\n",
+        "        # --- Queue Next Nodes (if any found) ---\n",
+        "        if next_nodes_info:\n",
+        "            add_to_execution_queue(next_nodes_info)\n",
+        "\n",
+        "    # --- End of while execution_queue loop for this call ---\n",
+        "\n",
+        "# --- Function to Start a Flow ---\n",
+        "def execute_node_flow_start(start_node_id, input_data=None):\n",
+        "    \"\"\"Sets up and starts processing a new flow execution.\"\"\"\n",
+        "    global execution_queue, active_run_id\n",
+        "    new_run_id = str(uuid.uuid4())[:6]\n",
+        "    if active_run_id and execution_queue:\n",
+        "        print(f\"Warning: Starting new run {new_run_id} while run {active_run_id} might be waiting.\")\n",
+        "    active_run_id = new_run_id\n",
+        "    executed_set = set()\n",
+        "    with full_log_output: print(f\"\\n--- Triggering New Execution Run {active_run_id} from Node {start_node_id} ---\")\n",
+        "    add_to_execution_queue([(start_node_id, input_data, active_run_id, executed_set)])\n",
+        "    process_execution_queue()\n",
+        "\n",
+        "# --- Play Mode Button Handler ---\n",
+        "def on_play_mode_clicked(b):\n",
+        "    with play_output: clear_output(wait=True); display(Markdown(\"--- **Play Mode Activated** ---\")); print(\"Scanning for Button nodes...\")\n",
+        "    with full_log_output: clear_output(wait=True); print(\"--- Play Mode Log ---\")\n",
+        "    buttons_to_display = []\n",
+        "    found_buttons = False\n",
+        "    for node_id, node_data in nodes.items():\n",
+        "        if node_data.get('type') == 'Button':\n",
+        "            found_buttons = True\n",
+        "            try:\n",
+        "                button_widget = widgets.Button(description=f\"▶️ {node_data.get('name', 'Button')}\", button_style='primary', tooltip=f\"Trigger {node_id}\")\n",
+        "                def handle_play_button_click(b_instance, n_id=node_id):\n",
+        "                    with play_output: display(Markdown(f\"▶️ *Clicked '{nodes[n_id]['name']}'...*\"))\n",
+        "                    try: execute_node_flow_start(n_id, input_data=None)\n",
+        "                    except Exception as e_flow_start:\n",
+        "                         tb_flow_start = traceback.format_exc()\n",
+        "                         err_start_md = Markdown(f\"💥 Flow Start Error `{nodes[n_id]['name']}` ({n_id}):\\n```\\n{e_flow_start}\\n{tb_flow_start[:500]}...\\n```\")\n",
+        "                         with play_output: display(err_start_md)\n",
+        "                         with full_log_output: print(f\"FATAL ERROR starting flow from {n_id}: {e_flow_start}\\n{tb_flow_start}\")\n",
+        "                button_widget.on_click(handle_play_button_click)\n",
+        "                buttons_to_display.append(button_widget)\n",
+        "            except Exception as e_create:\n",
+        "                 print(f\"ERROR creating button for {node_id}: {e_create}\")\n",
+        "                 with play_output: display(Markdown(f\"⚠️ Error creating button for `{node_data.get('name', node_id)}`\"))\n",
+        "    with play_output:\n",
+        "        if not found_buttons: display(Markdown(\"No 'Button' nodes found.\"))\n",
+        "        else:\n",
+        "            # print(f\"Displaying {len(buttons_to_display)} buttons...\")\n",
+        "            for btn in buttons_to_display: display(btn)\n",
+        "\n",
+        "play_mode_button.on_click(on_play_mode_clicked)\n",
+        "\n",
+        "# Display UI Elements\n",
+        "display(widgets.VBox([\n",
+        "    play_mode_button,\n",
+        "    widgets.HTML(\"<hr><b>Play Area:</b>\"), play_output,\n",
+        "    widgets.HTML(\"<hr><b>Execution Log:</b>\"), full_log_output\n",
+        "]))\n",
+        "\n",
+        "print(\"Play Mode UI and Logic updated (FIX for Combining Inputs + Syntax Fix 6).\")"
+      ],
+      "metadata": {
+        "id": "Eb0hDLHQA5OE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
